stylizowanie kwadratu i okna przegladarki

--- a/projekt.html
+++ b/projekt.html
@@ -9,15 +9,16 @@
     <style>
         div {
 
-            position: fixed;
+            position: fixed; /*przyklejenie do strony okna przegladarki*/
             background-color: #000;
             top: 50%;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); /*wyśrodkowanie pozycji 
+            na samym srodku ekranu */
         }
 
         body {
-            height: 10000vh
+            height: 10000vh /*wielkość strony internetowej*/
         }
     </style>
 </head>
